--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" rel="stylesheet"/>
+
 <style>
     
 /* GDPR checkbox styling */
@@ -285,7 +285,31 @@ button:active {
   <meta property="og:url" content="https://www.prevodigr.eu" />
   <meta name="twitter:card" content="summary_large_image" />
 
-<link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" as="style">
+
+
+<style>
+@font-face {
+  font-family: 'Poppins';
+  src: url('assets/fonts/poppins-v23-latin-regular.woff2') format('woff2');
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('assets/fonts/poppins-v23-latin-500.woff2') format('woff2');
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('assets/fonts/poppins-v23-latin-600.woff2') format('woff2');
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('assets/fonts/poppins-v23-latin-700.woff2') format('woff2');
+  font-weight: 700;
+}
+</style>
+
 </head>
 <body>
 <header>
