--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Plamen Mollov – Преводи от и на гръцки език</title>
+<title>Преводач гръцки език | Заклет преводач Пламен Моллов – Преводи, легализация, имоти в Гърция</title>
 
 <style>
     
