--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Преводач гръцки език | Заклет преводач Пламен Моллов – Преводи, легализация, имоти в Гърция</title>
+<title>Plamen Mollov – Преводи от и на гръцки език</title>
 
 <style>
     
@@ -278,9 +278,9 @@ button:active {
 }
 
 </style>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, преводи с гръцки език в Пловдив, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
   <meta property="og:title" content="Пламен Моллов – Преводи от и на гръцки език" />
-  <meta property="og:description" content="Заклет преводач с 17 г. опит, устни и писмени преводи, легализация, консултации, имоти в Гърция." />
+  <meta property="og:description" content="Заклет преводач с 17 г. опит, устни и писмени преводи, заверки и легализация на документи, консултации, имоти в Гърция." />
   <meta property="og:image" content="https://www.prevodigr.eu/assets/images/logo.webp" />
   <meta property="og:url" content="https://www.prevodigr.eu" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -309,6 +309,65 @@ button:active {
   font-weight: 700;
 }
 </style>
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
+  "image": "https://www.prevodigr.eu/assets/images/logo.webp",
+  "description": "Заклет преводач с 17+ години опит. Устни и писмени преводи, легализация, имотни сделки в Гърция.",
+  "url": "https://www.prevodigr.eu",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "4"
+  },
+  "review": [
+    {
+      "@type": "Review",
+      "author": "Мария Димитрова",
+      "reviewBody": "Изключително професионален подход и невероятно качество на преводите.",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      }
+    },
+    {
+      "@type": "Review",
+      "author": "Дияна Иванова",
+      "reviewBody": "Успях да сключа важен договор в Гърция. Истински мост между културите.",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      }
+    },
+    {
+      "@type": "Review",
+      "author": "Παρασκευαΐδης Χρήστος",
+      "reviewBody": "Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      }
+    },
+    {
+      "@type": "Review",
+      "author": "Пламен Чингаров",
+      "reviewBody": "Коректни преводачески услуги на достъпни цени. Бих ползвал отново!",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      }
+    }
+  ]
+}
+</script>
 
 </head>
 <body>
