--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@ button:active {
 }
 
 </style>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, преводи с гръцки език в Пловдив, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
   <meta property="og:title" content="Пламен Моллов – Преводи от и на гръцки език" />
-  <meta property="og:description" content="Заклет преводач с 17 г. опит, устни и писмени преводи, заверки и легализация на документи, консултации, имоти в Гърция." />
+  <meta property="og:description" content="Заклет преводач с 17 г. опит, устни и писмени преводи от и на гръцки език, заверки и легализация на документи, консултации, имоти в Гърция." />
   <meta property="og:image" content="https://www.prevodigr.eu/assets/images/logo.webp" />
   <meta property="og:url" content="https://www.prevodigr.eu" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -317,7 +317,7 @@ button:active {
   "@type": "ProfessionalService",
   "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
   "image": "https://www.prevodigr.eu/assets/images/logo.webp",
-  "description": "Заклет преводач с 17+ години опит. Устни и писмени преводи, легализация, имотни сделки в Гърция.",
+  "description": "Заклет преводач с 17+ години опит. Устни и писмени преводи на гръцки език, заверка и легализация на документи, Апостил, имотни сделки в Гърция.",
   "url": "https://www.prevodigr.eu",
   "aggregateRating": {
     "@type": "AggregateRating",
