--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Plamen Mollov – Преводи от и на гръцки език</title>
+<title>Пламен Моллов – Преводачески услуги с гръцки език в Пловдив – устни, писмени преводи, заверка и легализация на документи</title>
 
 <style>
     
