--- a/index.html
+++ b/index.html
@@ -311,14 +311,24 @@ button:active {
 </style>
 
 
+
+
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "ProfessionalService",
+  "@type": "LocalBusiness",
   "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
   "image": "https://www.prevodigr.eu/assets/images/logo.webp",
-  "description": "Заклет преводач с 17+ години опит. Устни и писмени преводи на гръцки език, заверка и легализация на документи, Апостил, имотни сделки в Гърция.",
   "url": "https://www.prevodigr.eu",
+  "telephone": "+359897098959",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "ул. Примерна 123",
+    "addressLocality": "Пловдив",
+    "postalCode": "4000",
+    "addressCountry": "BG"
+  },
   "aggregateRating": {
     "@type": "AggregateRating",
     "ratingValue": "5",
@@ -327,7 +337,11 @@ button:active {
   "review": [
     {
       "@type": "Review",
-      "author": "Мария Димитрова",
+      "author": {
+        "@type": "Person",
+        "name": "Мария Димитрова"
+      },
+      "datePublished": "2025-06-15",
       "reviewBody": "Изключително професионален подход и невероятно качество на преводите.",
       "reviewRating": {
         "@type": "Rating",
@@ -337,7 +351,11 @@ button:active {
     },
     {
       "@type": "Review",
-      "author": "Дияна Иванова",
+      "author": {
+        "@type": "Person",
+        "name": "Дияна Иванова"
+      },
+      "datePublished": "2025-06-10",
       "reviewBody": "Успях да сключа важен договор в Гърция. Истински мост между културите.",
       "reviewRating": {
         "@type": "Rating",
@@ -347,7 +365,11 @@ button:active {
     },
     {
       "@type": "Review",
-      "author": "Παρασκευαΐδης Χρήστος",
+      "author": {
+        "@type": "Person",
+        "name": "Παρασκευαΐδης Χρήστος"
+      },
+      "datePublished": "2025-05-28",
       "reviewBody": "Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.",
       "reviewRating": {
         "@type": "Rating",
@@ -357,7 +379,11 @@ button:active {
     },
     {
       "@type": "Review",
-      "author": "Пламен Чингаров",
+      "author": {
+        "@type": "Person",
+        "name": "Пламен Чингаров"
+      },
+      "datePublished": "2025-05-22",
       "reviewBody": "Коректни преводачески услуги на достъпни цени. Бих ползвал отново!",
       "reviewRating": {
         "@type": "Rating",
@@ -616,27 +642,5 @@ window.addEventListener("message", function(event) {
       nav.classList.toggle("active");
     });
   });
-</script><script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "ProfessionalService",
-  "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
-  "url": "https://www.prevodigr.eu",
-  "logo": "https://www.prevodigr.eu/assets/images/logo.webp",
-  "image": "https://www.prevodigr.eu/assets/images/bg-greece.webp",
-  "description": "Заклет преводач с гръцки език с над 17 години опит. Устни и писмени преводи, преводи на документи, легализация, имотни сделки в Гърция.",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Пловдив",
-    "addressCountry": "България"
-  },
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+359897098959",
-    "contactType": "Customer Service",
-    "areaServed": "BG, GR",
-    "availableLanguage": ["Bulgarian", "Greek"]
-  }
-}
 </script></body>
 </html>
