--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ button:active {
   "telephone": "+359897098959",
   "address": {
     "@type": "PostalAddress",
-    "streetAddress": "ул. Примерна 123",
+    "streetAddress": "ул. Димитър Талев 132",
     "addressLocality": "Пловдив",
     "postalCode": "4000",
     "addressCountry": "BG"
