--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ button:active {
 <a href="#services">Услуги / Υπηρεσίες</a>
 <a href="#prices">Цени / Τιμές</a>
 <a href="#real-estate">Имоти в Гърция / Ακίνητα στην Ελλάδα</a>
-<a href="#testimonials">Мнения / Αξιλογήσεις</a>
+<a href="#testimonials">Мнения / Αξιολογήσεις</a>
 <a href="#contact">Контакти / Επικοινωνίες</a>
 </div>
 </nav>
@@ -453,7 +453,7 @@ button:active {
 <section id="about">
 <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
 <p style="text-align: justify;">
-      Казвам се Пламен Асенов Моллов и съм заклет преводач от и на гръцки език с над 17 години опит. Завършил съм специалност "Български език и новогръцки език" в ПУ „Паисий Хилендарски“ – гр. Пловдив. Участвах в престижни програми като <strong>Сократ – Еразъм</strong> в Солунския университет „Аристотел“, където усъвършенствах знанията си по гръцки език и култура. Моята мисия е да създавам мостове между хората чрез езика, с уважение, точност и вдъхновение.
+      Казвам се Пламен Асенов Моллов и съм заклет преводач от и на гръцки език с над 17 години опит. Завършил съм специалност "Български език и новогръцки език" в ПУ „Паисий Хилендарски“ – гр. Пловдив. Участвал съм в престижни програми като <strong>Сократ – Еразъм</strong> в Солунския университет „Аристотел“, където усъвършенствах знанията си по гръцки език и култура. Моята мисия е да създавам мостове между хората чрез езика, с уважение, точност и вдъхновение.
     </p>
 <p style="text-align: justify;">
       Το όνομά μου είναι Πλάμεν Ασένοβ Μόλλοβ και είμαι επίσημος μεταφραστής-διερμηνέας από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης "Παίσιι Χιλεντάρσκι" και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης, ενισχύοντας τις γλωσσικές και πολιτισμικές μου γνώσεις.Η αποστολή μου είναι να φέρνω κοντά τους ανθρώπους μέσα από τη γλώσσα, με ακρίβεια, σεβασμό και έμπνευση. 
