--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ button:active {
   "image": "https://www.prevodigr.eu/assets/images/logo.webp",
   "url": "https://www.prevodigr.eu",
   "telephone": "+359897098959",
+  "priceRange": "$$",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "ул. Димитър Талев 132",
