--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <head>
 
 
+<link rel="preload" href="assets/fonts/poppins-v23-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="assets/fonts/poppins-v23-latin-500.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="assets/fonts/poppins-v23-latin-600.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="assets/fonts/poppins-v23-latin-700.woff2" as="font" type="font/woff2" crossorigin>
 <!-- Favicon икони за всички устройства -->
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
@@ -273,21 +277,29 @@ button:active {
   font-family: 'Poppins';
   src: url('assets/fonts/poppins-v23-latin-regular.woff2') format('woff2');
   font-weight: 400;
+
+  font-display: swap;
 }
 @font-face {
   font-family: 'Poppins';
   src: url('assets/fonts/poppins-v23-latin-500.woff2') format('woff2');
   font-weight: 500;
+
+  font-display: swap;
 }
 @font-face {
   font-family: 'Poppins';
   src: url('assets/fonts/poppins-v23-latin-600.woff2') format('woff2');
   font-weight: 600;
+
+  font-display: swap;
 }
 @font-face {
   font-family: 'Poppins';
   src: url('assets/fonts/poppins-v23-latin-700.woff2') format('woff2');
   font-weight: 700;
+
+  font-display: swap;
 }
 </style>
 
