--- a/index.html
+++ b/index.html
@@ -3,27 +3,22 @@
 
 <html lang="bg">
 <head>
-
-
-<link rel="preload" href="assets/fonts/poppins-v23-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="assets/fonts/poppins-v23-latin-500.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="assets/fonts/poppins-v23-latin-600.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="assets/fonts/poppins-v23-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-regular.woff2" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-500.woff2" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-600.woff2" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-700.woff2" rel="preload" type="font/woff2"/>
 <!-- Favicon икони за всички устройства -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="icon" type="image/png" sizes="192x192" href="/web-app-manifest-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/web-app-manifest-512x512.png">
-<meta name="theme-color" content="#ffffff">
-<meta name="msapplication-TileColor" content="#003366">
-
-
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="/site.webmanifest" rel="manifest"/>
+<link href="/web-app-manifest-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
+<link href="/web-app-manifest-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
+<meta content="#ffffff" name="theme-color"/>
+<meta content="#003366" name="msapplication-TileColor"/>
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Пламен Моллов – Преводачески услуги с гръцки език в Пловдив – устни, писмени преводи, заверка и легализация на документи</title>
-
 <style>
     
 /* GDPR checkbox styling */
@@ -263,15 +258,12 @@ button:active {
 }
 
 </style>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
-  <meta property="og:title" content="Пламен Моллов – Преводи от и на гръцки език" />
-  <meta property="og:description" content="Заклет преводач с 17 г. опит, устни и писмени преводи от и на гръцки език, заверки и легализация на документи, консултации, имоти в Гърция." />
-  <meta property="og:image" content="https://www.prevodigr.eu/assets/images/logo.webp" />
-  <meta property="og:url" content="https://www.prevodigr.eu" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-
-
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical">
+<meta content="Пламен Моллов – Преводи от и на гръцки език" property="og:title"/>
+<meta content="Заклет преводач с 17 г. опит, устни и писмени преводи от и на гръцки език, заверки и легализация на документи, консултации, имоти в Гърция." property="og:description"/>
+<meta content="https://www.prevodigr.eu/assets/images/logo.webp" property="og:image"/>
+<meta content="https://www.prevodigr.eu" property="og:url"/>
+<meta content="summary_large_image" name="twitter:card"/>
 <style>
 @font-face {
   font-family: 'Poppins';
@@ -302,11 +294,6 @@ button:active {
   font-display: swap;
 }
 </style>
-
-
-
-
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -388,11 +375,10 @@ button:active {
   ]
 }
 </script>
-
-</head>
+</link></meta></meta></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
+<img alt="Plamen Mollov Logo" height="150" loading="lazy" src="assets/images/logo.webp" width="300"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
@@ -411,7 +397,7 @@ button:active {
 <a href="#contact">Контакти / Επικοινωνίες</a>
 </div>
 </nav>
-<div class="hero" role="img" aria-label="Фоново изображение с гръцка тематика">
+<div aria-label="Фоново изображение с гръцка тематика" class="hero" role="img">
 <span class="hero-letter" style="top: 77%; left: 69%; animation-delay: 1.43s;">Χ</span>
 <span class="hero-letter" style="top: 9%; left: 47%; animation-delay: 2.79s;">Κ</span>
 <span class="hero-letter" style="top: 19%; left: 63%; animation-delay: 4.21s;">Υ</span>
@@ -618,7 +604,6 @@ button:active {
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
-
 <script>
 window.addEventListener("message", function(event) {
   if (event.origin.includes("fillout.com")) {
