--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@ button:active {
 <section id="contact">
 <h2 class="section-title">Контакти / Επικοινωνίες</h2>
 <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
-<p>📍 Град: Пловдив / πόλη Πλόβντιβ Βουλγαρίας</p>
+<p>📧 Email: <a href="mailto:info@prevodigr.eu">info@prevodigr.eu</a></p>
+<p>📍 Град: Пловдив, България / πόλη Πλόβντιβ Βουλγαρίας</p>
 <p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
 </section>
 <footer>
