--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="preload" href="assets/fonts/poppins-v23-latin-500.woff2" as="font" type="font/woff2" crossorigin importance="low">
 <link rel="preload" href="assets/fonts/poppins-v23-latin-600.woff2" as="font" type="font/woff2" crossorigin importance="low">
 <link rel="preload" href="assets/fonts/poppins-v23-latin-700.woff2" as="font" type="font/woff2" crossorigin importance="low">
+<link rel="preload" as="image" href="assets/images/bg-greece.webp" fetchpriority="high">
 <!-- Favicon икони за всички устройства -->
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
@@ -402,7 +403,7 @@ button:active {
 </head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
+<img alt="Plamen Mollov Logo" src="assets/images/logo.webp" fetchpriority="high"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
